Fixed the case where a too long word break free out of the div

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -32,6 +32,7 @@ article header a {
 }
 
 article p {
+  word-break: break-all;
   padding: 0.5em;
 }
 
@@ -45,6 +46,9 @@ article footer {
 }
 
 .socials {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   color:  #4056A1;
 }
 
